--- a/header.html
+++ b/header.html
@@ -2,20 +2,9 @@
 <head>
 	<title>MyMon</title>
 	<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
-	<script type="text/javascript">
-	<!--
-	function toggle_visibility(id) {
-		var e = document.getElementById(id);
-		if(e.style.display == 'block')
-			e.style.display = 'none';
-		else
-			e.style.display = 'block';
-		}
-	//-->
-	</script>
 	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	<link rel="icon" href="http://netbox.co/mymon/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="http://netbox.co/mymon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
