--- a/auth.html
+++ b/auth.html
@@ -1,16 +1,17 @@
 <table>
-<form action="avt.php" method="POST">
-<tr>
-<td>Имя</td>
-<td><input type="text" name="login"></td>
-</tr>
-<tr>
-<td>Пароль</td>
-<td><input type="password" name="password"></td>
-</tr>
-<tr>
-<td colspan="2"> <input type="submit" value="OK" name="submit"></td>
-</tr>
-</form>
+	<form action="avt.php" method="POST">
+		<tr>
+			<td><input type="hidden" name="auth_submit"></td>
+			<td>Имя</td>
+			<td><input type="text" name="login"></td>
+		</tr>
+		<tr>
+			<td>Пароль</td>
+			<td><input type="password" name="password"></td>
+		</tr>
+		<tr>
+			<td colspan="2"> <input type="submit" value="OK" name="submit"></td>
+		</tr>
+	</form>
 </table>
 <a href="reggy.php">Регистрация</a>
