--- a/auth.html
+++ b/auth.html
@@ -1,9 +1,6 @@
 <table>
 	<form action="avt.php" method="POST">
 		<tr>
-			<td><input type="hidden" name="auth_submit"></td>
-		</tr>
-		<tr>
 			<td>Имя</td>
 			<td><input type="text" name="login"></td>
 		</tr>
@@ -12,7 +9,7 @@
 			<td><input type="password" name="password"></td>
 		</tr>
 		<tr>
-			<td colspan="2"> <input type="submit" value="OK" name="submit"></td>
+			<td colspan="2"> <input type="submit" value="OK" name="auth_submit"></td>
 		</tr>
 	</form>
 </table>
