--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
 <font color="white"><div id="test_div" class="status_bar"></div></font>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
