--- a/reg.html
+++ b/reg.html
@@ -1,3 +1,6 @@
+<?php
+	include "header.html";
+?>
 <table>
 	<form action="reg.php" method="POST">
 		<tr>
@@ -20,4 +23,7 @@
 			<td colspan="2"><input type="submit" value="OK" name="submit" ></td>
 		</tr>
 	</form>
-</table> 
+</table>
+<?php
+	include "footer.html";
+?>
