--- a/auth.html
+++ b/auth.html
@@ -1,3 +1,8 @@
+<script> 
+    $(function(){
+      $("#includedContent").load("header.html");
+    });
+</script>
 <table>
 	<form action="index.php" method="POST">
 		<tr>
@@ -14,3 +19,8 @@
 	</form>
 </table>
 <a href="register.php">Регистрация</a>
+<script> 
+    $(function(){
+      $("#includedContent").load("footer.html");
+    });
+</script>
