--- a/header.html
+++ b/header.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>MyMon</title>
-	<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
-	<script type="text/javascript" src="jquery.js"></script>
-	<script type="text/javascript" src="script.js"></script>
-	<link rel="icon" href="http://<?php echo $_SERVER['HTTP_HOST'].dirname($_SERVER['PHP_SELF']); ?>/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+	<head>
+		<title>MyMon</title>
+		<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
+		<script type="text/javascript" src="jquery.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
+	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
