--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
 		<div id="test_div" class="status_bar"></div>
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	</body>
 </html>
