--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
 		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
