--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 	<body>
 		<table border="solid">
 			<tr>
-				<td id="a1" name="a1"><script>console.log('console log: " .$data. "');</script></td>
+				<td id="a1" name="a1"><script>console.log('console log: data. ');</script></td>
 			</tr>
 		</table>
 		<p><button onclick="javascript: addTimeout($('#a1'));" >Add</button>
