--- a/test.html
+++ b/test.html
@@ -16,15 +16,25 @@
 				Object.removeClass('timeout');
 				window.setTimeout(function(){ Object.addClass('timeout'); }, 100);
 			}
+			function myAjax(){
+    			$.ajax({
+					url: 'test.php',
+					success: function(html){
+						$('#a1').html(html);
+					},
+					error: function(){
+						$('#a1').html('error');
+					}
+    			});
+			};
 		</script>
 	</head>
 	<body>
 		<table border="solid">
 			<tr>
-				<td id="a1" name="a1"><script>console.log('console log: data. ');</script></td>
+				<td id="a1" name="a1"></td>
 			</tr>
 		</table>
-		<p><button onclick="javascript: addTimeout($('#a1'));" >Add</button>
-		<p><button onclick="javascript: $('#a1').removeClass('timeout');" >Remove</button>
+		<p><button onclick="javascript: myAjax();" >Add Test</button>
 	</body>
 </html>
