--- a/test.html
+++ b/test.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 	Click
-	<form href=https://mymon.pkwteile.de//index.php method=get>
-		<inut type=hidden name=task value=confirm>
-		<inut type=hidden name=usernamevalue=testtest>
-		<input type=submit value=here>
+	<form action='https://mymon.pkwteile.de/index.php' method='get'>
+		<inut type=hidden name='task' value='confirm'>
+		<inut type=hidden name='username' value='testtest'>
+		<input type=submit value='here'>
 	</form> 
 	to confirm.
 </body>
