--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	Click
-	<form action='https://mymon.pkwteile.de/index.php' method='get'>
+	<form action='https://mymon.pkwteile.de/index.php?task=confirm' method='get'>
 		<inut type=hidden name='task' value='confirm'>
 		<inut type=hidden name='username' value='testtest'>
 		<input type=submit value='here'>
