--- a/test.html
+++ b/test.html
@@ -3,11 +3,11 @@
 	<title>test</title>
 </head>
 <body>
-	Click
+	Click1
 	<form action='https://mymon.pkwteile.de/index.php?task=confirm' method='get'>
-		<inut type=hidden name='task' value='confirm'>
-		<inut type=hidden name='username' value='testtest'>
-		<input type=submit value='here'>
+		<inut type='hidden' name='task' value='confirm'>
+		<inut type='hidden' name='username' value='testtest'>
+		<input type='submit' >
 	</form> 
 	to confirm.
 </body>
