--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
 <body>
 	Click1
 	<form action='https://mymon.pkwteile.de/index.php?task=confirm' method='get'>
-		<inut type='hidden' name='task' value='confirm'>
-		<inut type='hidden' name='username' value='testtest'>
-		<input type='submit' >
+		<inut type='hidden' name='task' value='confirm'></input>
+		<inut type='hidden' name='username' value='testtest'></input>
+		<input type='submit' ></input>
 	</form> 
 	to confirm.
 </body>
