--- a/test.html
+++ b/test.html
@@ -3,12 +3,12 @@
 	<title>test</title>
 </head>
 <body>
-	Click1
-	<form action='https://mymon.pkwteile.de/index.php?task=confirm' method='get'>
-		<inut type='hidden' name='task' value='confirm'></input>
-		<inut type='hidden' name='username' value='testtest'></input>
-		<input type='submit' ></input>
-	</form> 
-	to confirm.
+Click
+<form action="https://mymon.pkwteile.de/index.php" method="get">
+	<inut type="hidden" name="task" value="confirm"></input>
+	<inut type="hidden" name="username" value="testtest"></input>
+	<input type="submit" ></input>
+</form> 
+to confirm.
 </body>
 </html>
