--- a/test.html
+++ b/test.html
@@ -1,14 +1,12 @@
 <html>
 <head>
-	<title>test</title>
+	<title>test1</title>
 </head>
 <body>
-Click
 <form action="https://mymon.pkwteile.de/index.php" method="get">
 	<inut type="hidden" name="task" value="confirm"></input>
 	<inut type="hidden" name="username" value="testtest"></input>
 	<input type="submit" ></input>
 </form> 
-to confirm.
 </body>
 </html>
