--- a/test.html
+++ b/test.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 <form action="https://mymon.pkwteile.de/index.php" method="get">
-	<inut type="hidden" name="task" value="confirm"></input>
-	<inut type="hidden" name="username" value="testtest"></input>
-	<input type="submit" ></input>
+	<inut type="hidden" name="task" value="confirm" \>
+	<inut type="hidden" name="username" value="testtest" \>
+	<input type="submit" \>
 </form> 
 </body>
 </html>
