--- a/test.html
+++ b/test.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 <form action="https://mymon.pkwteile.de/index.php" method="get">
-	<inut type="hidden" name="task" value="confirm" \>
-	<inut type="hidden" name="username" value="testtest" \>
+	<input type="hidden" name="task" value="confirm" \>
+	<input type="hidden" name="username" value="testtest" \>
 	<input type="submit" \>
 </form> 
 </body>
