--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
 		<div id="test_div" class="status_bar"></div>
+		<div id="messagebox" class="messagebox"></div>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
