--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
-		<div id="test_div" class="status_bar box effect2"></div>
-		<div id="messagebox" class="messagebox"></div>
+		<div id="test_div" class="status_bar"></div>
+		<div id="messagebox" class="messagebox box effect2"></div>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
