--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,7 @@
 		<div id="test_div" class="status_bar"></div>
-		<div id="messagebox" class="messagebox box effect2"></div>
+		<div class="messagebox">
+			<div id="messagebox" class="box effect2"></div>
+		</div>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
