--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 		<div id="test_div" class="status_bar"></div>
-		<div class="messagebox">
-			<div id="messagebox" class="box effect2"></div>
+		<div id="messagebox" class="messagebox">
+			<div class="box effect2"></div>
 		</div>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
