--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,8 @@
 		<div id="test_div" class="status_bar"></div>
 		<div id="messagebox" class="messagebox">
-			<div id="message" class="box effect2"></div>
+			<div id="message" class="box effect2">
+				<a class="mbclose" href="javascript: mbclose">x</a>
+			</div>
 		</div>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 	</body>
