--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 		<div id="test_div" class="status_bar"></div>
 		<div id="messagebox" class="messagebox">
-			<a class="mbclose" href="javascript: mbclose">x</a>
+			<a class="mbclose" href="javascript: mbclose();">x</a>
 			<div id="message" class="box effect2">
 			</div>
 		</div>
