--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <head>
 	<title>test1</title>
 	<script language="javascript">
-		function notifyMe() {
+		function notifyMe(message) {
 		  // Let's check if the browser supports notifications
 		  if (!("Notification" in window)) {
 		    alert("This browser does not support desktop notification");
@@ -11,7 +11,7 @@
 		  // Let's check whether notification permissions have already been granted
 		  else if (Notification.permission === "granted") {
 		    // If it's okay let's create a notification
-		    var notification = new Notification("Hi there!");
+		    var notification = new Notification(message);
 		  }
 
 		  // Otherwise, we need to ask the user for permission
@@ -19,7 +19,7 @@
 		    Notification.requestPermission(function (permission) {
 		      // If the user accepts, let's create a notification
 		      if (permission === "granted") {
-		        var notification = new Notification("Hi there!");
+		        var notification = new Notification(message);
 		      }
 		    });
 		  }
@@ -30,6 +30,6 @@
 	</script>
 </head>
 <body>
-<button onclick="notifyMe()">Notify me!</button>
+<button onclick="notifyMe('Test')">Notify me!</button>
 </body>
 </html>
