--- a/header.html
+++ b/header.html
@@ -10,4 +10,4 @@
 		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body width="630px">
+	<body>
