--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>MyMon</title>
-		<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1.0;">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
 		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="script.js"></script>
