--- a/header.html
+++ b/header.html
@@ -12,3 +12,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<div id="logo">
+			<img src="mymon.png">
+		</div>
