--- a/test.html
+++ b/test.html
@@ -1,11 +1,29 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-	<title>test1</title>
+  <title>Select Styling</title>
+  <style type="text/css">
+  	/* All select elements on page */
+	select {
+	  position: relative;
+	}
+
+	/* Style by class. Effects the text of the contained options. */
+	.blueText {
+	  color: #0000FF;
+	}
+
+	/* Style by id. Effects position of the select drop down. */
+	#styledSelect {
+	  left: 100px;
+	}
+  </style>
 </head>
 <body>
-	<select>
-		<option value="$">test1</option>
-		<option><span style="color: red;">test2</span></option>
-	</select>
+<select id="styledSelect" class="blueText">
+  <option value="apple">Apple</option>
+  <option value="orange">Orange</option>
+  <option value="cherry">Cherry</option>
+</select>
 </body>
 </html>
