--- a/test.html
+++ b/test.html
@@ -1,23 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <title>Select Styling</title>
-  <style type="text/css">
-  	/* All select elements on page */
-	select {
-	  position: relative;
-	}
-
-	/* Style by class. Effects the text of the contained options. */
-	.blueText {
-	  color: #0000FF;
-	}
-
-	/* Style by id. Effects position of the select drop down. */
-	#styledSelect {
-	  left: 100px;
-	}
-  </style>
+	<script type="text/javascript" src="jquery.js"></script>
+	<title>Select Styling</title>
 </head>
 <body>
 <select id="styledSelect" class="blueText">
