js from cdn and alertify in bottom of page

--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,9 @@
 		<div id="test_div" class="status_bar"></div>
-		<script src="bootstrap/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.2.min.js"
+		        integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
+		        crossorigin="anonymous"></script>
+		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="alertify.js/lib/alertify.js"></script>
 	</body>
 </html>
