--- a/header.html
+++ b/header.html
@@ -8,7 +8,6 @@
 	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" href="alertify.js/themes/alertify.core.css" />
-		<link rel="stylesheet" href="alertify.js/themes/alertify.default.css" />
+		<link rel="stylesheet" href="facyBox/facybox.css" />
 	</head>
 	<body>
