--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,6 @@
 		        crossorigin="anonymous"></script>
 		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<script type="text/javascript" src="facyBox/facybox.css"></script>
+		<script type="text/javascript" src="facyBox/facybox.js"></script>
 	</body>
 </html>
