--- a/header.html
+++ b/header.html
@@ -11,4 +11,4 @@
 		<link rel="stylesheet" href="facyBox/facybox.css" />
 	</head>
 	<body>
-		<div id="fade" class="fade"></div>
+		<div id="fade" class="fading"></div>
