--- a/auth.html
+++ b/auth.html
@@ -1,4 +1,7 @@
 <div class="register">
+	<div id="logo">
+        <img src="mymon.png">
+    </div>
 	<table>
 		<form action="index.php" method="POST">
 			<tr>
