--- a/auth.html
+++ b/auth.html
@@ -6,7 +6,7 @@
 		<form action="index.php" method="POST">
 			<tr>
 				<td>Имя</td>
-				<td><input type="text" name="login"></td>
+				<td><input type="text" name="login" autocapitalize="none"></td>
 			</tr>
 			<tr>
 				<td>Пароль</td>
