--- a/auth.html
+++ b/auth.html
@@ -1,6 +1,6 @@
 <div class="register">
 	<div id="logo">
-        <img src="mymon.png">
+        <img src="images/mymon.png">
     </div>
 	<table>
 		<form action="index.php" method="POST">
