--- a/header.html
+++ b/header.html
@@ -11,4 +11,4 @@
 		<link rel="stylesheet" href="facyBox/facybox.css" />
 	</head>
 	<body>
-		<div id="load_fade" class="load_fading"><img src="images/loading.gif" loop=infinite></div>
+		<div id="load_fade" class="load_fading"><img src="images/loading.gif?<?php echo time();?>" loop=infinite></div>
