--- a/header.html
+++ b/header.html
@@ -4,6 +4,8 @@
 		<title>MyMon</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
+		<meta http-equiv="Cache-Control" content="no-cache">
+		<meta http-equiv="expires" content="0">
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" />
