--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,7 @@
 		<div id="test_div" class="status_bar"></div>
-		<script src="https://code.jquery.com/jquery-2.2.2.min.js"
-		        integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
-		        crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+		<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
+		<script type="text/javascript" src="jquery-ui.js"></script>
 		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<script type="text/javascript" src="facyBox/facybox.js"></script>
 	</body>
 </html>
