--- a/header.html
+++ b/header.html
@@ -9,6 +9,6 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" />
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
