--- a/footer.html
+++ b/footer.html
@@ -1,2 +1,6 @@
+		<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
+		<script type="text/javascript" src="jquery-ui.js"></script>
+		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
