--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
-		<script type="text/javascript" src="jquery-2.2.2.min.js"></script>
-		<script type="text/javascript" src="jquery-ui.js"></script>
-		<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
+		<script type="text/javascript" src="js/jquery-ui.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
