--- a/header.html
+++ b/header.html
@@ -7,8 +7,8 @@
 		<meta http-equiv="Cache-Control" content="no-cache">
 		<meta http-equiv="expires" content="0">
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" />
-		<link rel="stylesheet" href="style.css" />
+	    <link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
