--- a/header.html
+++ b/header.html
@@ -10,5 +10,6 @@
 	    <link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/pull-to-refresh.css" />
 	</head>
 	<body>
