--- a/test.html
+++ b/test.html
@@ -21,6 +21,8 @@
         		    </tr>
     	    </div>
     	</div>
+        <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui.js"></script>
         <script type="text/javascript" src="js/jquery.plugin.pullToRefresh.js"></script>
     </body>
 </html>
