--- a/test.html
+++ b/test.html
@@ -19,10 +19,13 @@
         		    <tr>
         			<td>test4</td>
         		    </tr>
+                </table>
     	    </div>
     	</div>
         <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.js"></script>
         <script type="text/javascript" src="js/jquery.plugin.pullToRefresh.js"></script>
+        <script type="text/javascript" src="js/testscript.js"></script>
+    </body>
     </body>
 </html>
