--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@
                 </table>
     	    </div>
     	</div>
+        <b id="showScroll">0px</b>
         <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.js"></script>
         <script type="text/javascript" src="js/jquery.plugin.pullToRefresh.js"></script>
