--- a/test.html
+++ b/test.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" href="css/pull-to-refresh.css" />
     </head>
     <body>
+    	<div class="scrollable">
+    	</div>
         <b id="showScroll">0px</b>
         <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.js"></script>
