--- a/test.html
+++ b/test.html
@@ -4,8 +4,22 @@
 	<link rel="stylesheet" href="css/pull-to-refresh.css" />
     </head>
     <body>
-    	<div>
-    	</div>
+    	    <div class="wrap">
+        		<table>
+        		    <tr>
+        			<td>test1</td>
+        		    </tr>
+        		    <tr>
+        			<td>test2</td>
+        		    </tr>
+        		    <tr>
+        			<td>test3</td>
+        		    </tr>
+        		    <tr>
+        			<td>test4</td>
+        		    </tr>
+                </table>
+    	    </div>
         <b id="showScroll">0px</b>
         <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.js"></script>
