--- a/test.html
+++ b/test.html
@@ -22,6 +22,13 @@
         <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.js"></script>
         <script type="text/javascript" src="js/testscript.js"></script>
+        <script>
+            $(document).ready(function() {
+                $(window).scroll(function() {
+                  console.log("Scrolling.");
+                });
+            });
+        </script>
     </body>
     </body>
 </html>
