--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 	<title>Test</title>
 	<link rel="stylesheet" href="css/pull-to-refresh.css" />
     </head>
-    <body>
+    <body scrolling="yes">
 		<table>
 		    <tr>
 			<td>test1</td>
