--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 		<script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
-		<script type="text/javascript" src="jquery.mobile-1.4.5.min.js"></script>
+		<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
