--- a/footer.html
+++ b/footer.html
@@ -2,5 +2,6 @@
 		<script type="text/javascript" src="js/jquery-ui.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/jquery.multiselect.min.js"></script>
 	</body>
 </html>
