--- a/header.html
+++ b/header.html
@@ -10,6 +10,7 @@
 	    <link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="jquery.multiselect.css" />
+		<link rel="stylesheet" href="css/jquery.multiselect.css" />
+		<link rel="stylesheet" href="css/jquery-ui.css" />
 	</head>
 	<body>
