--- a/footer.html
+++ b/footer.html
@@ -3,5 +3,6 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript" src="js/jquery.multiselect.min.js"></script>
+		<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 	</body>
 </html>
