--- a/header.html
+++ b/header.html
@@ -12,5 +12,6 @@
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/jquery.multiselect.css" />
 		<link rel="stylesheet" href="css/jquery-ui.css" />
+		<link rel="stylesheet" href="css/dropdown.css" />
 	</head>
 	<body>
