--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-	   <title>Test</title>
+	    <title>Test</title>
+        <link rel="stylesheet" href="css/jquery-ui.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
     </head>
@@ -18,6 +19,8 @@
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Отдельная ссылка</a></li>
             </ul>
         </div>
+        <script type="text/javascript" src="js/jquery-2.2.2.min.js"></script>
+        <script type="text/javascript" src="js/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </body>
 </html>
