--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
     </head>
-    <body scrolling="yes">
+    <body>
 		<div class="dropdown">
             <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
                 Dropdown
