--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html; Charset=UTF-8">
 		<meta http-equiv="Cache-Control" content="no-cache">
 		<meta http-equiv="expires" content="0">
-		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="icon" type="image/png" href="favicon.png">
 	    <link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
